--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "recharts": "^2.12.7",
     "express": "^4.17.1",
     "path": "^0.12.7",
+    "mongoose": "^5.12.3",
     "react-scripts": "4.0.3"
   },
   "devDependencies": {
@@ -14,6 +15,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "react-scripts build"
+    "build": "cd auth-front && npm install && npm run build"
   }
 }
