--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "cd auth-front && npm install && npm run build"
+    "build": "vite build"
   }
 }
